# nanobot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: guides.md
src/nanobots/: __init__.py  cli.py  core.py  registry.py
src/nanobots/spaces/code/: secrets.py  space.yaml
src/nanobots/spaces/intel/: space.yaml
src/nanobots/spaces/ops/: health.py  space.yaml
src/nanobots/spaces/recon/: space.yaml
src/nanobots/spaces/research/: space.yaml
src/nanobots/spaces/security/: space.yaml  threat-radar.py
tests/: test_core.py
